# Seam_Carving

./: CMakeLists.txt  SeamCarver.cpp  SeamCarver.h  main.cpp
